@@ -218,20 +218,6 @@ end_import
 
 begin_import
 import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|jasper
-operator|.
-name|compiler
-operator|.
-name|JspUtil
-import|;
-end_import
-
-begin_import
-import|import
 name|com
 operator|.
 name|google
@@ -748,81 +734,58 @@ literal|"]"
 return|;
 block|}
 comment|/**    * Append an HTML-formatted status readout on the current    * state of the underlying loggers.    * @param sb the StringBuilder to append to    */
-DECL|method|appendHtmlReport (StringBuilder sb)
+DECL|method|appendReport (StringBuilder sb)
 name|void
-name|appendHtmlReport
+name|appendReport
 parameter_list|(
 name|StringBuilder
 name|sb
 parameter_list|)
 block|{
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|"<table class=\"storage\">"
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|"<thead><tr><td>JN</td><td>Status</td></tr></thead>\n"
-argument_list|)
-expr_stmt|;
 for|for
 control|(
+name|int
+name|i
+init|=
+literal|0
+init|,
+name|len
+init|=
+name|loggers
+operator|.
+name|size
+argument_list|()
+init|;
+name|i
+operator|<
+name|len
+condition|;
+operator|++
+name|i
+control|)
+block|{
 name|AsyncLogger
 name|l
-range|:
+init|=
 name|loggers
-control|)
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|i
+operator|!=
+literal|0
+condition|)
 block|{
 name|sb
 operator|.
 name|append
 argument_list|(
-literal|"<tr>"
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|"<td>"
-operator|+
-name|JspUtil
-operator|.
-name|escapeXml
-argument_list|(
-name|l
-operator|.
-name|toString
-argument_list|()
-argument_list|)
-operator|+
-literal|"</td>"
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|"<td>"
-argument_list|)
-expr_stmt|;
-name|l
-operator|.
-name|appendHtmlReport
-argument_list|(
-name|sb
-argument_list|)
-expr_stmt|;
-name|sb
-operator|.
-name|append
-argument_list|(
-literal|"</td></tr>\n"
+literal|", "
 argument_list|)
 expr_stmt|;
 block|}
@@ -830,9 +793,29 @@ name|sb
 operator|.
 name|append
 argument_list|(
-literal|"</table>"
+name|l
+argument_list|)
+operator|.
+name|append
+argument_list|(
+literal|" ("
 argument_list|)
 expr_stmt|;
+name|l
+operator|.
+name|appendReport
+argument_list|(
+name|sb
+argument_list|)
+expr_stmt|;
+name|sb
+operator|.
+name|append
+argument_list|(
+literal|")"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|/**    * @return the (mutable) list of loggers, for use in tests to    * set up spies    */
 annotation|@
