@@ -30957,7 +30957,7 @@ literal|"stream"
 argument_list|,
 name|elos
 operator|.
-name|generateHtmlReport
+name|generateReport
 argument_list|()
 argument_list|)
 expr_stmt|;
