@@ -88,6 +88,16 @@ end_import
 
 begin_import
 import|import
+name|junit
+operator|.
+name|framework
+operator|.
+name|Assert
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -998,6 +1008,121 @@ name|qe
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+annotation|@
+name|Test
+DECL|method|testQuorumOutputStreamReport ()
+specifier|public
+name|void
+name|testQuorumOutputStreamReport
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|futureReturns
+argument_list|(
+literal|null
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|spyLoggers
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+operator|.
+name|startLogSegment
+argument_list|(
+name|Mockito
+operator|.
+name|anyLong
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|futureReturns
+argument_list|(
+literal|null
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|spyLoggers
+operator|.
+name|get
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|startLogSegment
+argument_list|(
+name|Mockito
+operator|.
+name|anyLong
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|futureReturns
+argument_list|(
+literal|null
+argument_list|)
+operator|.
+name|when
+argument_list|(
+name|spyLoggers
+operator|.
+name|get
+argument_list|(
+literal|2
+argument_list|)
+argument_list|)
+operator|.
+name|startLogSegment
+argument_list|(
+name|Mockito
+operator|.
+name|anyLong
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|QuorumOutputStream
+name|os
+init|=
+operator|(
+name|QuorumOutputStream
+operator|)
+name|qjm
+operator|.
+name|startLogSegment
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|String
+name|report
+init|=
+name|os
+operator|.
+name|generateReport
+argument_list|()
+decl_stmt|;
+name|Assert
+operator|.
+name|assertFalse
+argument_list|(
+literal|"Report should be plain text"
+argument_list|,
+name|report
+operator|.
+name|contains
+argument_list|(
+literal|"<"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Test
