@@ -221,8 +221,6 @@ name|SuppressWarnings
 argument_list|(
 block|{
 literal|"unchecked"
-block|,
-literal|"deprecation"
 block|}
 argument_list|)
 annotation|@
@@ -1104,17 +1102,11 @@ name|File
 argument_list|(
 name|nameDirUris
 operator|.
-name|toArray
-argument_list|(
-operator|new
-name|URI
-index|[
-literal|0
-index|]
-argument_list|)
-index|[
-literal|0
-index|]
+name|iterator
+argument_list|()
+operator|.
+name|next
+argument_list|()
 argument_list|)
 decl_stmt|;
 name|assertEquals
